Update peptide analysis.

--- a/slides.html
+++ b/slides.html
@@ -35,7 +35,7 @@ background-size: cover
 
 .move-top20[
 .title-text[&lt;span style='font-size:0.9em'&gt;SARS-CoV-2 Evolution&lt;/span&gt;]  
-.title-subtext[&lt;span style='font-size:0.9em'&gt;Nucleotide Variants &amp; Case Incidence in the Philadelphia Region&lt;/span&gt;]  
+.title-subtext[&lt;span style='font-size:0.9em'&gt;Diversity &amp; Case Incidence in the Philadelphia Region&lt;/span&gt;]  
 ]  
   
 .callout-url-leftcorner[
@@ -43,7 +43,7 @@ background-size: cover
 Brendan J. Kelly, MD, MS  
 Infectious Diseases &amp; Epidemiology  
 University of Pennsylvania  
-25 March 2022  
+08 April 2022  
 ]
 ]
 
@@ -172,18 +172,49 @@ exclude: true
 &lt;img src="figs/p_lmm_logdiff_color.png" width="100%" style="display: block; margin: auto;" /&gt;
 
 
+---
+
+&lt;img src="figs/scv2_peptide_diversity_per_position_and_time_clear.gif" width="100%" style="display: block; margin: auto;" /&gt;
+
 
 ---
-exclude: true
+
+&lt;img src="figs/scv2_peptide_diversity_per_position_and_time_shadow.gif" width="100%" style="display: block; margin: auto;" /&gt;
+
+---
+
+&lt;img src="figs/p_lm_logdiff_peptide_color.png" width="100%" style="display: block; margin: auto;" /&gt;
+
+
+---
+
+&lt;img src="figs/p_lm_logdiff_peptide_color_tag.png" width="100%" style="display: block; margin: auto;" /&gt;
+
+
+
+
+
+
+
+
+---
+exclude: false
 
 ## Conclusions    
   
 .pad-left[
 
-- COVID-19 molecular evolution          
+- COVID-19 molecular evolution &amp; the Canyon Hypothesis
 
-- The Canyon Hypothesis  
-  
+    - Wolf et al *mBio* 2022
+
+- Next steps:  
+
+    - mixed effects model with regularizing prior for peptide analysis
+    
+    - covariance across sites
+    
+    - ORF1ab primer target identification
   
 ]
 
